codeV2/services/static/styles/indexStyles.css
/* ... */
.AboutMe .AboutMeText h1, .Work .WorkText h1, .ContactMe .contactText h1{
    width: 100%;
    height: 107px;
    left: 9px;
    top: 12px;
    text-decoration: none;
    margin-block-start: 0em;
    margin-block-end: 0em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 700;
    font-size: 72px;
    line-height: 95px;
    
    color: #FFFFFF;
}
.AboutMe .function, .Work .function, .ContactMe .function {
    color: #ADFF00;
}
.quote .quoteHead .function {
    color: #ADFF00;
}
.AboutMe .AboutMeText p, .ContactMe .contactText p{
    width: 100%;
    height: auto;
    left: 12px;
    top: 128px;

    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 24px;

    color: #FFE600;
}


.AboutMe .Info {
    width: 100%;
    height: 424px;
    display: flex;
}




.Info div{
    margin-right: 2em;
}

.Info h3{
font-family: 'Roboto Mono';
font-style: normal;
font-weight: 400;
font-size: 24px;
line-height: 32px;
color: #FFFFFF;
}

.mainSkills, .tools, .Experience, .Languages {
    width: 20%;
    height: 333px;    
    }


.mainSkills p, .tools p, .Experience p, .Languages p{
    width: 100%;
    height: 333px;
    left: -2px;
    top: 1px;
    
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 32px;
    overflow-x:hidden; 
    overflow-y:auto;
    color: rgba(255, 255, 255, 0.75);
}

.Experience span, .mainSkills span, .tools span, .Languages span{
    color: #ADFF00;
}


.Visuals{
    width: 40%;
    height: 40vw;
    margin-left: 5%;
}
.Img img {
    width: 471px;
    height: 420px;
    left: 685px;
    top: 5px;
    border-radius: 24px;
}

.quote {
    width: 470px;
height: 224px;
left: 0px;
top: 0px;

font-family: 'Roboto Mono';
font-style: normal;
font-weight: 400;
font-size: 24px;
line-height: 32px;
margin-bottom: 15vmax;
color: #FFE600;
}

span.quoteHead {
    font-family: 'Roboto Mono';
font-style: normal;
font-weight: 400;
font-size: 36px;
line-height: 47px;

color: #FFFFFF;
}

span.quoteText {
    font-family: 'Roboto Mono';
font-style: italic;
font-weight: 400;
font-size: 24px;
line-height: 32px;

color: #FFE600;
}

span.quoteFoot {
    font-family: 'Roboto Mono';
font-style: normal;
font-weight: 400;
font-size: 24px;
line-height: 32px;

color: #FFFFFF;
}


.Work {
    position: relative;
    width: 90vw;
    height: 2100px;
    margin-left: 5vw;
    margin-top: 30em;
}

.WorkText {
    position: relative;
    width: auto;
    height: 192px;
    left: 0px;
    top: 0px;    
}

.WorkText p {
    width: 624px;
    height: 92px;
    left: 12px;
    top: 128px;
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 24px;
    
    color: #FFE600;
 }

.Products, .Papers, .Projects, .InProgress {
    width: 90vw;
    height: 456px;
    left: 11px;
    top: 225px;
}

.ProductHeader, .PaperHeader, .ProjectHeader, .InProgressHeader {
    width: auto;
    height: 119px;
    left: 0px;
    top: 3px;

} 


.subHeader {
    width: 284px;
    height: 59px;
    left: 1px;
    top: 1px;

    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-size: 36px;
    line-height: 47px;

    color: #FFFFFF;
 }

.ProductHeader p, .PaperHeader p, .ProjectHeader p, .InProgressHeader p {
    width: auto;
    height: 27px;
    left: 4px;
    top: 61px;
    
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 24px;
    
    color: #FFE600;
 }


.ProductCarousel, .PaperCarousel, .ProjectCarousel, .InProgressCarousel {
    width: 90vw;
    height: 296px;
    left: 0px;
    top: 122px;
    display: flex;
    overflow-x: auto;
    overflow-y: hidden;
    justify-content: center;
}

.ProductTile, .PaperTile, .ProjectTile, .InProgressTile {
    width: 350px;
    justify-content: center;
    display:flex;
}

.ProductTile a, .PaperTile a, .ProjectTile a, .InProgressTile a {
    width: 100%;
    height: 100%;
    text-decoration: none;
}




.ProductItem, .PaperItem, .ProjectItem, .InProgressItem {
    width: 100%;
    height: 100%;
    left: 12px;
    top: 0px;
    justify-content: center;
    text-align: center;
    left: calc(50% - 238px/2);
    

}

.ProductItem img, .PaperItem img, .ProjectItem img, .InProgressItem img {
    width: 300px;
    height: 200px;
    transition: all 0.3s ease;

}

.ProductItem img:hover, .PaperItem img:hover, .ProjectItem img:hover, .InProgressItem img:hover{
    width: 315px;
    height: 215px;
    margin-left:auto;
}

.ProductItem p, .PaperItem p, .ProjectItem p, .InProgressItem p{
    width: 100%px;
    height: 30px;
    left: 48px;
    top: 238px;

    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 16px;
    text-align: center;

    color: #FFE600;
}

.ProductItem h3, .PaperItem h3, .ProjectItem h3, .InProgressItem h3{
    width: 100%;
    height: 10px;
    left: 48px;
    top: 200px;
    
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 24px;
    text-align: center;
    
    color: #FFFFFF;
}

#ProlificitySection
{
    width: 100%;
}

#PersistenceSection
{
    width: 100%;
    text-align: center;
    justify-content: center;
}


#TitleBoxSection {
}

#PleasureSection {
    height: auto;
}

.PleasureBox {
    position: relative;
    width: 90vw;
    height: auto;
    left: 5vw;
    top: 20vmin;
    display: flex;
    justify-content: center;
}

.LeftCol {
    width: 40vw;
    height: auto;
}

.RightCol {
    width: 40vw;
    height: auto;
    margin-left: 5vw;
    margin-top: 45vh;
}


.PleasureItem {
    width: 100%;
    height: 125vh;
}

.PleasureItem a img{
    width: 100%;
    height: 80%;
    transition: all 0.3s ease;
}

.PleasureItem a img:hover{
    width: 97%;
    height: 77%;
}
/* ... */

